--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               A highly motivated and enthusiastic fresher with a passion for computer science and engineering. <br>Eager to apply theoretical knowledge gained from academic studies to practical projects and contribute positively to the field.<br>
             </p>
             <div class="btn-box">
-              <a href="link_to_your_resume.pdf" download class="btn btn-primary">Download Resume</a>
+              <a href="https://firebasestorage.googleapis.com/v0/b/portfolio-bacf3.appspot.com/o/TUSHAR%20RESUME.pdf?alt=media&token=f775ace6-65e2-468d-bf57-52257f45f1c9" download class="btn btn-primary">Download Resume</a>
             </div>
           </div>
         </div>
